explorer/scan-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scan-backend
  namespace: bohr-prod
  labels:
    app.kubernetes.io/name: scan-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scan-backend
  template:
    metadata:
      labels:
        app: scan-backend
        app.kubernetes.io/name: scan-backend
    spec:
      terminationGracePeriodSeconds: 30
      volumes:
        - name: scan-backend-logs-pvc
          persistentVolumeClaim:
            claimName: scan-backend-logs-pvc
        - name: scan-backend-dets-pvc
          persistentVolumeClaim:
            claimName: scan-backend-dets-pvc
      # 添加 initContainer
      containers:
        - name: scan-backend
#          image: ghcr.io/blockscout/blockscout:latest
#          command: ["sh", "-c", "bin/blockscout eval \"Elixir.Explorer.ReleaseTasks.create_and_migrate()\" && bin/blockscout start"]
          image: blockscout/blockscout:6.8.1.commit.1b1d3402
          command: ["sh", "-c", "bin/blockscout eval \"Elixir.Explorer.ReleaseTasks.create_and_migrate()\" && bin/blockscout start"]
          resources:
            requests:
              memory: "500Mi"
              cpu: "100m"
            limits:
              memory: "16000Mi"
              cpu: "8000m"
          ports:
            - containerPort: 4000
          livenessProbe:
            failureThreshold: 10
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 4000
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 10
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 4000
            timeoutSeconds: 5

          volumeMounts:
            - name: scan-backend-logs-pvc
              mountPath: /app/logs/
            - name: scan-backend-dets-pvc
              mountPath: /app/dets/
