explorer/scan-backend-sig-provider-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scan-backend-deployment
  namespace: bohr-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scan-backend
  template:
    metadata:
      labels:
        app: scan-backend
    spec:
      nodeSelector:
        kubernetes.io/hostname: ip-10-13-53-226.ap-northeast-1.compute.internal
      containers:
        - name: scan-backend
          image: 630968570112.dkr.ecr.ap-northeast-1.amazonaws.com/bohr-prod/scan-backend:test-df9f0d-20251216022342
          imagePullPolicy: Always
          command: ["/bin/bash"]
          args:
            - "-c"
            - |
              [...]
          securityContext:
            runAsUser: 0
            runAsGroup: 0
            privileged: true
            allowPrivilegeEscalation: true
            capabilities:
              add: ["SYS_ADMIN", "NET_ADMIN", "DAC_OVERRIDE", "FOWNER", "MKNOD"]
          volumeMounts:
            - name: host-containerd-sock
              mountPath: /run/containerd/containerd.sock
              readOnly: true
            - name: host-containerd-data
              mountPath: /var/lib/containerd
            - name: blockscout-db-data
              mountPath: /app/docker-compose/services/blockscout-db-data
            - name: stats-db-data
              mountPath: /app/docker-compose/services/stats-db-data
            - name: logs
              mountPath: /app/docker-compose/services/logs
            - name: dets
              mountPath: /app/docker-compose/services/dets
          resources:
            requests:
              memory: "3Gi"
              cpu: "1000m"
            limits:
              memory: "6Gi"
              cpu: "2000m"
      volumes:
        - name: host-containerd-sock
          hostPath:
            path: /run/containerd/containerd.sock
            type: Socket
        - name: host-containerd-data
          hostPath:
            path: /var/lib/containerd
            type: Directory
        - name: blockscout-db-data
          persistentVolumeClaim:
            claimName: scan-backend-blockscout-db-data-pvc
        - name: stats-db-data
          persistentVolumeClaim:
            claimName: scan-backend-stats-db-data-pvc
        - name: logs
          persistentVolumeClaim:
            claimName: scan-backend-logs-pvc
        - name: dets
          persistentVolumeClaim:
            claimName: scan-backend-dets-pvc
