explorer/scan-sig-provider-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scan-sig-provider
  namespace: bohr-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scan-sig-provider
  template:
    metadata:
      labels:
        app: scan-sig-provider
    spec:
      nodeSelector:
        kubernetes.io/hostname: ip-10-13-53-226.ap-northeast-1.compute.internal
      containers:
        - name: sig-provider
          image: ghcr.io/blockscout/sig-provider:v1.1.1
          resources:
            requests:
              memory: "10Mi"
              cpu: "10m"
            limits:
              memory: "11Mi"
              cpu: "11m"
