explorer/scan-stats-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scan-stats
  namespace: bohr-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scan-stats
  template:
    metadata:
      labels:
        app: scan-stats
    spec:
      containers:
        - name: scan-stats
          image: ghcr.io/blockscout/stats:v2.12.0
          resources:
            requests:
              memory: "250Mi"
              cpu: "250m"
            limits:
              memory: "6000Mi"
              cpu: "3000m"
          ports:
            - containerPort: 8080
