explorer/scan-user-ops-indexer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scan-user-ops-indexer
  namespace: bohr-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scan-user-ops-indexer
  template:
    metadata:
      labels:
        app: scan-user-ops-indexer
    spec:
      nodeSelector:
        kubernetes.io/hostname: ip-10-13-53-226.ap-northeast-1.compute.internal
      containers:
        - name: user-ops-indexer
          image: ghcr.io/blockscout/user-ops-indexer:latest
          ports:
            - containerPort: 8050
            - containerPort: 8051
            - containerPort: 6060
          resources:
            requests:
              memory: "256Mi"    # 增加内存，100Mi对Next.js可能不足
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
