explorer/scan-sig-provider-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scan-sig-provider
  namespace: bohr-prod
spec:
  type: ClusterIP
  selector:
    app: scan-sig-provider
