explorer/scan-visualizer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scan-visualizer
  namespace: bohr-prod
spec:
  type: ClusterIP
  selector:
    app: scan-visualizer
